# agentic-coop-db

./: .dockerignore  .editorconfig  .gitignore  .golangci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  go.mod  go.sum  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  question.yml
.github/workflows/: build-images.yml  ci.yml  codeql.yml  publish-pypi.yml  release-binaries.yml  release.yml  (+3 more)
clients/python/: README.md  pyproject.toml
clients/python/src/agentcoopdb/: __init__.py  client.py  errors.py  queue.py  retry.py
clients/python/src/agentcoopdb/cli/: __init__.py  config.py  doctor.py  init.py  key.py  main.py  queue.py
clients/python/src/aicoldb/: __init__.py  client.py  errors.py  queue.py  retry.py  vector.py
clients/python/src/aicoldb/cli/: __init__.py  config.py  doctor.py  init.py  key.py  main.py  queue.py
clients/python/src/aicoopdb/: client.py  queue.py  vector.py
clients/python/src/aicoopdb/cli/: config.py  doctor.py  key.py  queue.py
clients/python/tests/: test_cli_config.py  test_client.py  test_e2e_offline.py  test_errors.py  test_queue.py  test_retry.py  test_vector.py
deploy/: compose.cloud.yml  compose.external-pg.yml  compose.local.yml  compose.pi-lite.yml  compose.yml  stack.swarm.yml
docs/: README.md  api.md  architecture.md  deploy-cloud.md  deploy-local.md  deploy-pi-lite.md  deploy-swarm.md  faq.md  mcp.md  rls.md  rpc-authoring.md  security.md
migrations/: 0001_control_plane.down.sql  0001_control_plane.up.sql  0002_idempotency.down.sql  0002_idempotency.up.sql  0003_rpc_registry.down.sql  0003_rpc_registry.up.sql  0004_roles_and_grants.down.sql  0004_roles_and_grants.up.sql  0005_pgvector.down.sql  0005_pgvector.up.sql  0006_example_tenant_table.down.sql  0006_example_tenant_table.up.sql  0007_split_control_plane_schema.down.sql  0007_split_control_plane_schema.up.sql  0008_rename_identifiers.down.sql  0008_rename_identifiers.up.sql  0009_grant_existing_tables.down.sql  0009_grant_existing_tables.up.sql  0010_reassign_public_ownership.down.sql  0010_reassign_public_ownership.up.sql
requirements/: ci-audit.in  ci-audit.txt  ci-build.in  ci-build.txt  ci-python.in  ci-python.txt
scripts/: dev-up.sh  gen-key.sh  verify-acs.sh
(+105 files in other folders)
