[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agentic-coop-db"
version = "0.2.2"
description = "Auth gateway client for shared PostgreSQL — sends parameterised SQL over HTTPS."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Franz Heinfling" }
]
keywords = ["postgres", "postgresql", "auth", "gateway", "pgvector", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.32",
    "typer>=0.12",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
]

[project.scripts]
agentic-coop-db = "agentcoopdb.cli.main:app"

[project.urls]
Homepage = "https://github.com/fheinfling/agentic-coop-db"
Source = "https://github.com/fheinfling/agentic-coop-db"
Issues = "https://github.com/fheinfling/agentic-coop-db/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcoopdb"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

# typer.Option(...) / typer.Argument(...) MUST appear in argument
# defaults — that's how Typer (and FastAPI) declare option metadata.
# B008 ("Do not perform function call in argument defaults") is a
# known false positive for these libraries; suppress only on the CLI
# entrypoint module.
[tool.ruff.lint.per-file-ignores]
"src/agentcoopdb/cli/main.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
